<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="28dp">

        <TextView
            android:id="@+id/tVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/geomcalc"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iVFigure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_weight="1"
            android:src="@drawable/figure"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="@string/resultcalc"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eTNameF"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/stylewhite"
            android:ems="10"
            android:hint="@string/choicefname"
            android:paddingLeft="25dp"
            android:paddingTop="12dp"
            android:textColorHint="@color/gray"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tVResult"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/stylewhite"
            android:ems="10"
            android:hint="@string/res"
            android:paddingLeft="25dp"
            android:paddingTop="12dp"
            android:textColorHint="@color/gray"
            android:textSize="18dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/stylebutton"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</LinearLayout>