<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="28dp">

        <TextView
            android:id="@+id/tVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/geomcalc"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iVFigure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/figure" />

        <EditText
            android:id="@+id/eTLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/stylewhite"
            android:ems="10"
            android:hint="@string/loginenter"
            android:paddingLeft="18dp" />

        <EditText
            android:id="@+id/eTPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="@drawable/stylewhite"
            android:ems="10"
            android:hint="@string/passwenter"
            android:textColorHint="@color/gray"
            android:textSize="18dp"
            android:paddingLeft="18dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/stylebutton"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>