<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="28dp">
        <TextView
            android:id="@+id/tVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/choicef"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iVFigure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/figure" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="28dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerChoiceF"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:background="@drawable/stylewhite" />

        <EditText
            android:id="@+id/eTPreformData"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/stylewhite"
            android:ems="10"
            android:hint="@string/denter"
            android:paddingLeft="10dp"
            android:textColorHint="@color/gray"
            android:textSize="18dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonResult"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/stylebutton"
            android:text="@string/performcalc"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>